Modified Makefile and scheduler algo files to transpose to c++

--- a/C/Makefile
+++ b/C/Makefile
@@ -18,31 +18,25 @@ clean:
 
 
 rr: driver.o list.o CPU.o schedule_rr.o
-	$(CC) $(CFLAGS) -o rr driver.o schedule_rr.o list.o CPU.o
-
-sjf: driver.o list.o CPU.o schedule_sjf.o
-	$(CC) $(CFLAGS) -o sjf driver.o schedule_sjf.o list.o CPU.o
+	g++ $(CFLAGS) -o rr driver.o schedule_rr.o list.o CPU.o
 
 fcfs: driver.o list.o CPU.o schedule_fcfs.o
-	$(CC) $(CFLAGS) -o fcfs driver.o schedule_fcfs.o list.o CPU.o
+	g++ $(CFLAGS) -o fcfs driver.o schedule_fcfs.o list.o CPU.o
 
 priority: driver.o list.o CPU.o schedule_priority.o
-	$(CC) $(CFLAGS) -o priority driver.o schedule_priority.o list.o CPU.o
+	g++ $(CFLAGS) -o priority driver.o schedule_priority.o list.o CPU.o
 
-schedule_fcfs.o: schedule_fcfs.c
-	$(CC) $(CFLAGS) -c schedule_fcfs.c
+schedule_fcfs.o: schedule_fcfs.cpp
+	g++ $(CFLAGS) -c schedule_fcfs.cpp
 
 driver.o: driver.c
 	$(CC) $(CFLAGS) -c driver.c
 
-schedule_sjf.o: schedule_sjf.c
-	$(CC) $(CFLAGS) -c schedule_sjf.c
+schedule_priority.o: schedule_priority.cpp
+	g++ $(CFLAGS) -c schedule_priority.cpp
 
-schedule_priority.o: schedule_priority.c
-	$(CC) $(CFLAGS) -c schedule_priority.c
-
-schedule_rr.o: schedule_rr.c
-	$(CC) $(CFLAGS) -c schedule_rr.c
+schedule_rr.o: schedule_rr.cpp
+	g++ $(CFLAGS) -c schedule_rr.cpp
 
 list.o: list.c list.h
 	$(CC) $(CFLAGS) -c list.c
